webcompat/static/css/development/components/comment.css
/** @define Comment */

:root {
  --Comment-fontSize: var(--base-fontSize);
  --Comment-color: var(--base-variantColorLight);
  --Comment-widthAvatar: 59px;
  --Comment-heightAvatar: 56px;
}

/* Main Class */
.wc-Comment {
  font-size: var(--Comment-fontSize);
  display: flex;
  flex-direction: row;
}

  /* space */
  .wc-Comment + .wc-Comment {
    margin-top: 1em;
  }

  /* Avatar */
  .wc-Comment-avatar {
    width: var(--Comment-widthAvatar);
    height: var(--Comment-heightAvatar);
  }

    /* img */
    .wc-Comment-avatar img {
      width: 100%;
    }

  @media all and (max-width: 61.87em) {

    .wc-Comment-avatar {
      display: none;
    }
  }

  /* Body */
  .wc-Comment-body {
    position: relative;
    flex: 1;
    max-width: 100%;
  }

  @media all and (min-width: 61.88em) {

    .wc-Comment-body {
      margin-left:.8em;
      max-width: calc(100% - 59px);
    }
  }

    /* Body Caret */
    .wc-Comment-body--caret:after {
      position: absolute;
      content: "";
      width: 18px;
      height: 18px;
      top: 15px;
      left: -9px;
      background-color: #f0f0f0;
      border-color: var(--Comment-color);
      border-style: solid;
      border-width: 0px 0px 1px 1px;
      transform: rotate(45deg);
    }

    /* Form submit */
    .wc-Comment--form .wc-Comment-body--caret:after {
       background-color: #fff;
    }

  /* Wrapper Comment-header Comment-content */
  .wc-Comment-wrapper {
    position: relative;
    width: 100%;
    min-height: 128px;
    font-family: inherit;
    border: solid 1px var(--Comment-color);
    border-radius: 10px;
    padding: 0;
    word-wrap: break-word;
    background : #fff;
  }

    /* modifier new comment of existing bug */
    .wc-Comment-wrapper--comment {
      display: block;
      border-bottom: 1px dashed var(--Comment-color);
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
      padding: 1em;
    }

  /* Comment Textarea */
  .wc-Comment-text {
    padding-left: 1em;
  }

  /* Textarea Placeholder style */
  .wc-Comment-wrapper::placeholder {
    color: var(--Comment-color);
    opacity: 1;
    font-size: 1.2em;
    font-weight: 500;
  }

    .wc-Comment-wrapper--postForm {
      padding: 1em;
      margin-bottom: 1.5em;
    }


  /* Comment Header */
  .wc-Comment-header {
    border-radius: 10px 10px 0 0;
    background-color: #f0f0f0;
    padding: .8em .8em .8em 1em;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .wc-Comment-header-spacing {
    padding: 0 6px;
  }

  /* Name of owner */
  .wc-Comment-owner {
    font-weight: bold;
  }

  /* Comment text */
  .wc-Comment-content {
    position: relative;
    word-wrap: break-word;
    padding: 1em;
  }

  .wc-Comment-content .is-hidden {
    display: none;
  }

  /* img attach file */
  .wc-Comment-attach {
    display: block;
    margin:.8em 0 0 0;
    padding: .4em;
    text-align: center;
    overflow: hidden /* prevent overflow */
  }

  /* prevent width of img */
  .wc-Comment-attach img {
    width: 100%;
    max-width: 100%;
  }

  /* Button */
  .wc-Comment-button {
    text-align: right;
    margin:1.2em 0 0;
  }

  @media all and (max-width: 48.12em) {

   .wc-Comment-button {
     text-align: center;
     font-size:.9em;
    }
  }

  .wc-Comment-button .button {
    text-align: center;
  }

  /* QR */
  .wc-Comment-qr {
    z-index: 1;
    margin-left: auto;
  }

